force-app/main/default/objects/AutoAccountRec__c/AutoAccountRec__c.object-meta.xml
<CustomObject>
    <label>AutoAccountRec</label>
    <nameField>
        <label>AutoAccountRec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AutoAccount</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>