force-app/main/default/objects/AutoAccountRec__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AutoAccount</relationshipLabel>
    <relationshipName>AutoAccount</relationshipName>
    <type>Lookup</type>
</CustomField>